tests/compile-fail/singleton_only_for_input.stderr
error: `singleton` option not allowed here
  --> tests/compile-fail/singleton_only_for_input.rs:10:18
   |
10 | #[salsa::tracked(singleton)]
   |                  ^^^^^^^^^

error: `singleton` option not allowed here
  --> tests/compile-fail/singleton_only_for_input.rs:15:19
   |
15 | #[salsa::interned(singleton)]
   |                   ^^^^^^^^^

error: `singleton` option not allowed here
  --> tests/compile-fail/singleton_only_for_input.rs:20:18
   |
20 | #[salsa::tracked(singleton)]
   |                  ^^^^^^^^^

error: `singleton` option not allowed here
  --> tests/compile-fail/singleton_only_for_input.rs:25:22
   |
25 | #[salsa::accumulator(singleton)]
   |                      ^^^^^^^^^
